Update SaurabhGupta - DataProgramming PS2.ipynb

--- a/SaurabhGupta - DataProgramming PS2.ipynb
+++ b/SaurabhGupta - DataProgramming PS2.ipynb
@@ -262,7 +262,7 @@
     "    if len (links) >=0 and depth>=indentation:\n",
     "      for link in links:\n",
     "          print ( (indentation) *\" \"+link)\n",
-    "          webdir( link, depth, indentation)\n",
+    "          webdir( link, depth, indetation)\n",
     " else:\n",
     "return"
    ]
@@ -283,18 +283,18 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "# THIS CELL WILL CREATE THE TABLE NAMED AS 'whether' below\n",
+    "# CREATE THE TABLE NAMED AS 'whether' below\n",
     "CREATE TABLE whether\n",
     "(\n",
-    "city varchar(15),\n",
-    "countrt varchar(15),\n",
-    "season varchar(15),\n",
+    "city varchar(20),\n",
+    "countrt varchar(25),\n",
+    "season varchar(55),\n",
     "temperature float,\n",
     "rainfall float\n",
     ");\n",
     "\n",
     "%%sql\n",
-    "# THIS WILL INSERT THE DATAS IN TABLE...\n",
+    "# NOW INSERT THE DATAS IN TABLE..\n",
     "INSERT INTO whether VALUES('Mumbai', 'India', 'Winter', 24.8,5.9),\n",
     "('Mumbai', 'India', 'Spring', 28.4,16.2),\n",
     "('Mumbai', 'India', 'Summer', 27.9,1549.4),\n",
@@ -309,7 +309,7 @@
     "%%sql\n",
     "select * from whether;\n",
     "\n",
-    "OUTPUT:.. TABLE\n",
+    "OUTPUT: TABLE\n",
     "\n",
     "#ANS (a)\n",
     "\n",
@@ -319,19 +319,19 @@
     "\n",
     "#ANS (b)\n",
     "\n",
-    "# WILL RETURN ALL CITIES, BUT WITHOUT REPITATION\n",
+    "# CITIES, BUT WITHOUT REPITATION\n",
     "%%sql\n",
     "select distinct city from whether;\n",
     "\n",
     "#ANSWER (c)\n",
     "\n",
-    "#WILL RETURN ALL RECORDS FOR INDIA\n",
+    "#RECORDS FOR INDIA\n",
     "%%sql\n",
     "select * from whether where countrt =='India';\n",
     "\n",
     "#ANSWER (D):\n",
     "\n",
-    "# WILL RETURN ALL RECORDS FOR SEASON FALL\n",
+    "# RECORDS FOR SEASON FALL\n",
     "%%sql\n",
     "select * from whether where season == 'Fall';\n",
     "\n",
@@ -343,19 +343,19 @@
     "\n",
     "#ANSWER (F)\n",
     "\n",
-    "#WILL RETURN CITY AND COUNTRY FOR FALL SEASON WHERE TEMP > 20\n",
+    "#CITY AND COUNTRY FOR FALL SEASON WHERE TEMP > 20\n",
     "%%sql\n",
     "select city, countrt from whether where season == 'Fall' and temperature > 20 order by temperature ASC;\n",
     "\n",
     "#ANSWER (G)\n",
     "\n",
-    "#WILL RETURN ANNUAL RAINFALL FOR CAIRO CITY\n",
+    "#ANNUAL RAINFALL FOR CAIRO CITY\n",
     "%%sql\n",
     "select sum(rainfall) AS annual_rainfall from whether where city == 'Cairo';\n",
     "\n",
     "#ANSWER (H)\n",
     "\n",
-    "# WILL RETURN ANNUAL RAINFALL FOR EACH SEASON\n",
+    "# ANNUAL RAINFALL FOR EACH SEASON\n",
     "%%sql\n",
     "select season, sum(rainfall) AS annual_rainfall from whether group by season ;"
    ]
